--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img id="weather-icon" alt="Weather Icon">
         <div id="temp-div"></div>
         <div id="weather-info"></div>
-        <div id="hourly-forcast"></div>
+        <div id="hourly-forecast"></div>
     </div>
   </body>
 </html>
